[package]
name = "rust-coding-bootcamp"
version = "0.0.1"
authors = ["Sean O'Brien <sean.obrien@yale.edu>"]

[[bin]]
name = "lesson2"

[[bin]]
name = "lesson3"

#[[bin]]
#name = "lesson4"

[[bin]]
name = "lesson5"

[[bin]]
name = "lesson6"

[[bin]]
name = "lesson7"

[[bin]]
name = "lesson9"

[[bin]]
name = "lesson10"

[[bin]]
name = "lesson11"

[[bin]]
name = "lesson12"

[[bin]]
name = "lesson13"

[[bin]]
name = "lesson14"

[[bin]]
name = "lesson15"

[[bin]]
name = "lesson17"

[[bin]]
name = "lesson18"

[[bin]]
name = "lesson20"

[[bin]]
name = "lesson21"

[dependencies]
anymap = "0.12.1"
csv = "0.15.0"
docopt = "0.8.1"
#docopt_macros = "0.7.0"
hyper = { version = "0.10.13", default-features = false }
image = "0.17.0"
itertools = "0.7.2"
json_macros = { git = "https://github.com/zsiciarz/json_macros.git" }
libc = "0.2.24"
nalgebra = "0.13.1"
num = "0.1.40"
postgres = { version = "0.15.1", features = ["with-rustc-serialize", "with-time"] }
postgres_array = "0.9.0"
#postgres_range = "0.8.2"
primal = "0.2.3"
rand = "0.3.18"
redis = "0.8.0"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.18"
time = "0.1.38"
tau = "1.0.4"
url = "1.6.0"
uuid = { version = "0.5.1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
fuse = "0.3.1"
#postgres_macros = "0.1.13"
zmq = "0.8.2"

#[replace]
#"docopt_macros:0.7.0" = { git = "https://github.com/zsiciarz/docopt.rs.git" }
